# advanced_multiprocessor_programming

./: .gitignore
exercises_batch_1/: Makefile  exercises.tex
exercises_batch_2/: exercises.tex
task1/: CMakeLists.txt  GNUmakefile  README
task1/presentation/: .gitignore  presentation.tex
task1/src/: CMakeLists.txt  balancer.hpp  block.hpp  layer.hpp  pcn.cpp  pcn.hpp  periodic.hpp
task2/: CMakeLists.txt  GNUmakefile  README
task2/data/: .gitignore  prep.sh
task2/go/: GNUmakefile  main.go
task2/go/src/cuckoo/: cuckoo.go  cuckoo_test.go
task2/go/src/probe/: probe.go
task2/protocol/: .gitignore  05contains_025add.gp  099contains_0005add.gp  Makefile  gp.sh  protocol.tex  refined.gp  striped.gp
task2/src/: CMakeLists.txt  atomicmarkablereference.cpp  atomicmarkablereference.hpp  cuckoo.cpp  cuckoolock.cpp  cuckoolock.hpp  cuckooset.cpp  cuckooset.hpp  hash.cpp  hash.hpp  probeset.cpp  probeset.hpp  stdset.cpp  stdset.hpp
task2/test/: CMakeLists.txt  cuckooset.cpp
